tests/sksl/errors/golden/SwizzleOnlyLiterals.glsl
### Compilation failed:

error: 1: swizzle must refer to base expression
1 error
